2nd part complete

--- a/index.html
+++ b/index.html
@@ -25,5 +25,16 @@
         </div>
         
     </section>
+    <section class="dream-bg">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Professional Web Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla perspiciatis debitis doloribus reiciendis nemo provident non voluptatem temporibus eaque officia, recusandae velit eos consequatur? Nesciunt necessitatibus molestias error modi asperiores.</p>
+            <a class="hire-button" href="https://github.com/masudparvez05" target="_blank">Download Resume</a>
+        </div>
+    </section>
 </body>
 </html>
