--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-area">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Masud Parvez</span> World!</h1>
@@ -25,7 +25,7 @@
         </div>
         
     </section>
-    <section class="dream-bg">
+    <section class="dream-bg flexible-area">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -36,5 +36,23 @@
             <a class="hire-button" href="https://github.com/masudparvez05" target="_blank">Download Resume</a>
         </div>
     </section>
+    <section class="ex-img">
+        <h1>Experience Area</h1>
+        <div class="flexible-area">
+            <div class="experience-area border-blue ">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2024 | Student of Programming Hero</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="experience-area border-orange">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2024-Present | Professional Developer</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
